# cargo-select

./: Cargo.toml  README.md
src/: cli.rs  get_tests.rs  logging.rs  main.rs  select.rs  tui.rs
