[package]
name = "cargo-select"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.4", features = ["derive"]}
cargo_toml = "0.11.5"
fuzzy-matcher = "0.3.7"
flexi_logger = "0.22.3"
log = "*"
